// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickBinTabScreen Tests rendering the PickBinTabScreen component Test renders the PickBinTabScreen component with AssignedToMe List and zone 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <View>
    <ListGroup
      groupItems={true}
      pickListItems={
        Array [
          Object {
            "assignedAssociate": "vn51wu8",
            "category": 46,
            "createTS": "10:32 AM 03/04/2022",
            "createdBy": "Associate 2",
            "id": 4,
            "itemDesc": "Candy",
            "itemNbr": 7344,
            "moveToFront": true,
            "palletId": 4321,
            "palletLocationId": 1672,
            "palletLocationName": "C1-2-1",
            "quickPick": false,
            "salesFloorLocationId": 1673,
            "salesFloorLocationName": "C1-3",
            "status": "accepted pick",
            "upcNbr": "000041800004",
          },
        ]
      }
      title="[missing \\"en.PICKING.ASSIGNED_TO_ME\\" translation](1)"
    />
    <ListGroup
      groupItems={true}
      pickListItems={
        Array [
          Object {
            "assignedAssociate": "Associate 1",
            "category": 71,
            "createTS": "4:25 PM 02/09/2022",
            "createdBy": "Manager 1",
            "id": 3,
            "itemDesc": "Swiffer",
            "itemNbr": 845,
            "moveToFront": true,
            "palletId": 5432,
            "palletLocationId": 2345,
            "palletLocationName": "BREW1-2",
            "quickPick": false,
            "salesFloorLocationId": 2345,
            "salesFloorLocationName": "BREW1-2",
            "status": "accepted pick",
            "upcNbr": "000052900004",
          },
        ]
      }
      title="BREW(1)"
    />
    <ListGroup
      groupItems={true}
      pickListItems={
        Array [
          Object {
            "assignedAssociate": "Associate 1",
            "category": 71,
            "createTS": "10:32 AM 02/04/2022",
            "createdBy": "Associate 1",
            "id": 418,
            "itemDesc": "Teapot",
            "itemNbr": 734,
            "moveToFront": true,
            "palletId": 4321,
            "palletLocationId": 1672,
            "palletLocationName": "C1-2",
            "quickPick": false,
            "salesFloorLocationId": 1673,
            "salesFloorLocationName": "C1-3",
            "status": "accepted pick",
            "upcNbr": "000041800003",
          },
          Object {
            "assignedAssociate": "vn51wu8",
            "category": 46,
            "createTS": "10:32 AM 03/04/2022",
            "createdBy": "Associate 2",
            "id": 4,
            "itemDesc": "Candy",
            "itemNbr": 7344,
            "moveToFront": true,
            "palletId": 4321,
            "palletLocationId": 1672,
            "palletLocationName": "C1-2-1",
            "quickPick": false,
            "salesFloorLocationId": 1673,
            "salesFloorLocationName": "C1-3",
            "status": "accepted pick",
            "upcNbr": "000041800004",
          },
        ]
      }
      title="C(2)"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#eeeeee",
        "padding": 10,
      }
    }
  >
    <Text>
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</View>
`;

exports[`PickBinTabScreen Tests rendering the PickBinTabScreen component Test renders the PickBinTabScreen component without AssignedToMe List and zone 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <View>
    <ListGroup
      groupItems={true}
      pickListItems={Array []}
      title="[missing \\"en.PICKING.ASSIGNED_TO_ME\\" translation](0)"
    />
    <ListGroup
      groupItems={true}
      pickListItems={
        Array [
          Object {
            "assignedAssociate": "Associate 1",
            "category": 71,
            "createTS": "4:25 PM 02/09/2022",
            "createdBy": "Manager 1",
            "id": 3,
            "itemDesc": "Swiffer",
            "itemNbr": 845,
            "moveToFront": true,
            "palletId": 5432,
            "palletLocationId": 2345,
            "palletLocationName": "BREW1-2",
            "quickPick": false,
            "salesFloorLocationId": 2345,
            "salesFloorLocationName": "BREW1-2",
            "status": "accepted pick",
            "upcNbr": "000052900004",
          },
        ]
      }
      title="BREW(1)"
    />
    <ListGroup
      groupItems={true}
      pickListItems={
        Array [
          Object {
            "assignedAssociate": "Associate 1",
            "category": 71,
            "createTS": "10:32 AM 02/04/2022",
            "createdBy": "Associate 1",
            "id": 418,
            "itemDesc": "Teapot",
            "itemNbr": 734,
            "moveToFront": true,
            "palletId": 4321,
            "palletLocationId": 1672,
            "palletLocationName": "C1-2",
            "quickPick": false,
            "salesFloorLocationId": 1673,
            "salesFloorLocationName": "C1-3",
            "status": "accepted pick",
            "upcNbr": "000041800003",
          },
        ]
      }
      title="C(1)"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#eeeeee",
        "padding": 10,
      }
    }
  >
    <Text>
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</View>
`;
